[gd_scene load_steps=6 format=2]

[ext_resource path="res://Smiley.gd" type="Script" id=1]
[ext_resource path="res://leaves_and_ground.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://darkblue.tres" type="StyleBox" id=3]
[ext_resource path="res://LightBlue.tres" type="StyleBox" id=4]

[sub_resource type="DynamicFont" id=1]
size = 25
extra_spacing_char = 3
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Back" type="Button" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 150.0
margin_bottom = 52.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.815686, 0.917647, 1, 1 )
custom_colors/font_color_hover = Color( 0.219608, 0.713726, 1, 1 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Random" type="Button" parent="."]
margin_left = 11.0
margin_top = 103.0
margin_right = 150.0
margin_bottom = 145.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.815686, 0.917647, 1, 1 )
custom_colors/font_color_hover = Color( 0.219608, 0.713726, 1, 1 )
text = "RANDOM SMILEY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Button" parent="."]
margin_left = 13.0
margin_top = 204.0
margin_right = 156.0
margin_bottom = 246.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.815686, 0.917647, 1, 1 )
custom_colors/font_color_hover = Color( 0.219608, 0.713726, 1, 1 )
text = "Next to Logo"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Random" to="." method="_on_Random_pressed"]
[connection signal="pressed" from="Logo" to="." method="_on_Logo_pressed"]
